Bug 157992 - UI Changing a spelling error in the spelling dialog removes footnote from the edited sentence
Summary: UI Changing a spelling error in the spelling dialog removes footnote from the...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:24.2.0 target:7.6.4 target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Spell-Checking
  Show dependency treegraph
 
Reported: 2023-10-31 00:13 UTC by Gabor Kelemen (Collabora)
Modified: 2024-02-19 17:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (25.13 KB, application/vnd.oasis.opendocument.text)
2023-10-31 00:13 UTC, Gabor Kelemen (Collabora)
Details
The document in the Spelling dialog before fixing the typo (92.67 KB, image/png)
2023-10-31 00:13 UTC, Gabor Kelemen (Collabora)
Details
The document after editing the sentence and pressing the Correct button (91.34 KB, image/png)
2023-10-31 00:14 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-10-31 00:13:19 UTC
Created attachment 190521 [details]
Example file from Writer

Attached document has a sentence with a typo and a footnote.
If the sentence is edited in the Spelling dialog, the footnote disappears from the document.

1. Open attached file
2. Open the spelling dialog by pressing F7
3. Fix the typo by editing it in the Not in Dictionary box. It's important to keep the cursor inside the mistyped word, otherwise the behavior is not broken.
4. Press Correct
-> the footnote disappears from the document

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7fff4e2ca6739928f72e5f0d2eb5820823916769
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Seems to have started in 6.3 with:

https://git.libreoffice.org/core/+/243b5b392906042ab03800e0b5765e6f3513372c

author	Caolán McNamara <caolanm@redhat.com>	Fri Jun 14 21:56:44 2019 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Sat Jun 22 19:28:38 2019 +0200

weld SpellDialog
Comment 1 Gabor Kelemen (Collabora) 2023-10-31 00:13:55 UTC
Created attachment 190522 [details]
The document in the Spelling dialog before fixing the typo
Comment 2 Gabor Kelemen (Collabora) 2023-10-31 00:14:31 UTC
Created attachment 190523 [details]
The document after editing the sentence and pressing the Correct button
Comment 3 Gabor Kelemen (Collabora) 2023-10-31 00:15:39 UTC
Reserving, this is from a customers find.
Comment 4 Commit Notification 2023-11-15 21:20:54 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7a4a5de2d932b6edfc53b6742029e266c52fa127

tdf#157992 update error position after modifying input

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-11-18 09:05:12 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5deeb28a32146b0de887a4eb6fb3e23cb2f4549b

tdf#157992 update error position after modifying input

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2023-12-18 12:36:29 UTC
Verified in 

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bcbc0857bf4bc24b5ea36e445a367cce0a382da4
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Now the footnote does not disappear
Comment 7 Commit Notification 2024-02-15 21:29:50 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fb72dc2474e644b66f8de6557210a2f6dedcfcc3

tdf#157992: add test to make sure footnotes don't get deleted

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-02-19 17:07:48 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c7ef4b2757a5219e12a9b6a5c68b3512026d1ade

Fix for test related to tdf#157992

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.