tdf#157992 update error position after modifying input

a manual fix in the text changes the start/end position of the error
that needs to be updateed to find the correct error text when applying the change

Change-Id: I91b0801d5a08ee9e2508493cce03b8112c48a542
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159449
Tested-by: Jenkins
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 7a4a5de2d932b6edfc53b6742029e266c52fa127)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159456
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>